Correct map img path

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
 
         <div class="map-section">
-            <img src="/assets/img/map/map.jpg" alt="" srcset="">
+            <img src="./assets/img/map/map.jpg" alt="" srcset="">
         </div>
     </div>
 
